--- a/build.properties
+++ b/build.properties
@@ -8,5 +8,6 @@ bin.includes = plugin.xml,\
                lib_velocity/commons-collections-3.2.1.jar,\
                lib_velocity/commons-lang-2.4.jar,\
                lib_velocity/velocity-1.7.jar,\
-               tpl/
+               tpl/,\
+               lib/guava-13.0.1.jar
 jars.compile.order = .
