--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,5 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                lib_mysql/mysql-connector-java-5.1.9.jar,\
-               tpl/,\
-               lib/guava-13.0.1.jar
+               tpl/
 jars.compile.order = .
