--- a/plugin.xml
+++ b/plugin.xml
@@ -20,28 +20,28 @@
       <wizard
             category="SofaPlugin"
             class="sdt.wizards.newservice.NewServiceWizard"
-            icon="icons/WebService.png"
+            icon="icons/node/green.png"
             id="SDT.NewServiceWizard"
             name="Sofa Service">
       </wizard>
       <wizard
             category="SofaPlugin"
             class="sdt.wizards.newdal.NewSofaDalWizard"
-            icon="icons/persistenceEntity.png"
+            icon="icons/node/orange.png"
             id="SDT.NewDalWizard"
             name="Sofa Dal">
       </wizard>
       <wizard
             category="SofaPlugin"
             class="sdt.wizards.newproject.NewProjectWizard"
-            icon="icons/resourcesRoot.png"
+            icon="icons/node/group.png"
             id="SDT.NewProjectWizard"
             name="Sofa Project">
       </wizard>
       <wizard
             category="SofaPlugin"
             class="sdt.wizards.newcontroller.NewControllerWizard"
-            icon="icons/webRoot.png"
+            icon="icons/node/blue.png"
             id="SDT.NewControllerWizard"
             name="Sofa Controller">
       </wizard>
