--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               lib_mysql/mysql-connector-java-5.1.9.jar,\
-               tpl/
+               tpl/,\
+               lib_mysql/mysql-connector-java-5.1.9.jar
 jars.compile.order = .
