--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               tpl/,\
-               lib_mysql/mysql-connector-java-5.1.9.jar
+               tpl/
 jars.compile.order = .
