--- a/plugin.xml
+++ b/plugin.xml
@@ -10,6 +10,13 @@
             name="ServiceXmlHyperlinks"
             targetId="org.eclipse.core.runtime.xml">
       </hyperlinkDetector>
+      <hyperlinkDetector
+            activate="true"
+            class="sdt.hyperlinks.DaoHyperlinks"
+            id="SDT.DaoHyperlinks"
+            name="DaoHyperlinks"
+            targetId="org.eclipse.jdt.ui.javaCode">
+      </hyperlinkDetector>
    </extension>
    <extension
          point="org.eclipse.ui.newWizards">
